// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuestionIdSchema doesn't allow empty 1`] = `
"2 validation issue(s)

  Issue #0: too_small at 
  Should be at least 1 characters

  Issue #1: custom_error at 
  Question ID can only include letters, numbers, \\"_\\", \\"[\\", and \\"]\\".
"
`;

exports[`QuestionIdSchema doesn't allow null 1`] = `
"1 validation issue(s)

  Issue #0: invalid_type at 
  Expected string, received null
"
`;

exports[`QuestionIdSchema doesn't allow special characters except _, [, and ] 1`] = `
"1 validation issue(s)

  Issue #0: custom_error at 
  Question ID can only include letters, numbers, \\"_\\", \\"[\\", and \\"]\\".
"
`;

exports[`QuestionIdSchema doesn't allow special characters except _, [, and ] 2`] = `
"1 validation issue(s)

  Issue #0: custom_error at 
  Question ID can only include letters, numbers, \\"_\\", \\"[\\", and \\"]\\".
"
`;

exports[`QuestionIdSchema doesn't allow special characters except _, [, and ] 3`] = `
"1 validation issue(s)

  Issue #0: custom_error at 
  Question ID can only include letters, numbers, \\"_\\", \\"[\\", and \\"]\\".
"
`;

exports[`QuestionIdSchema doesn't allow special characters except _, [, and ] 4`] = `
"1 validation issue(s)

  Issue #0: custom_error at 
  Question ID can only include letters, numbers, \\"_\\", \\"[\\", and \\"]\\".
"
`;

exports[`QuestionIdSchema doesn't allow undefined 1`] = `
"1 validation issue(s)

  Issue #0: invalid_type at 
  Required
"
`;
